# f-spot

./: .cvsignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  COPYING  ChangeLog  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  F-Spot.mds  F-Spot.sln  HACKING  LICENSE  MAINTAINERS  Makefile.addins  Makefile.am  Makefile.include  NEWS  NuGet.config  README  README.md  TODO  acinclude.m4  after.F-Spot.sln.targets.in  am-config.mk  autogen.sh  azure-pipelines.yml  build.proj  configure.ac  configure.in  external.patch  f-spot-import.desktop.in.in  f-spot-view.desktop.in  f-spot-view.desktop.in.in  f-spot.csproj  f-spot.desktop.in.in  f-spot.doap  (+8 more)
FSPOT_0_5_0_STABLE/: .gitignore  COPYING  ChangeLog  MAINTAINERS  Makefile.am  Makefile.include  README  TODO  acinclude.m4  f-spot-view.desktop.in.in  f-spot.pc.in
FSPOT_0_5_0_STABLE/Tao/: COPYING
FSPOT_0_5_0_STABLE/dbus-sharp-glib/: Makefile.am
FSPOT_0_5_0_STABLE/dpap-sharp/: ChangeLog  README
FSPOT_0_5_0_STABLE/extensions/: ChangeLog  Makefile.am
FSPOT_0_5_0_STABLE/icons/: darkroom.gtkrc
FSPOT_0_5_0_STABLE/libeog/: .gitignore  access.c  access.h  accessible-image-view-factory.c  accessible-image-view.h  cursors.h  eog-image.h  eog-scroll-view.h  image-view.c  image-view.h  ui-image.h
FSPOT_0_5_0_STABLE/libfspot/: f-pixbuf-save.c  f-pixbuf-unsharp.c
FSPOT_0_5_0_STABLE/libgphoto2-sharp/: AssemblyInfo.cs  Context.cs
FSPOT_0_5_0_STABLE/libjpegtran/: jpeg-data.c
FSPOT_0_5_0_STABLE/po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  be@latin.po  de.po  el.po  en_GB.po  es.po  eu.po  fr.po  gl.po  he.po  hu.po  it.po  ja.po  ka.po  lt.po  mk.po  oc.po  pa.po  pt_BR.po  ru.po  sk.po  sv.po  uk.po  vi.po
FSPOT_0_5_0_STABLE/semweb/: KnowledgeModel.cs  Makefile.am  N3Writer.cs  RdfReader.cs  SQLStore.cs  Sparql.cs  Statement.cs
FSPOT_0_5_0_STABLE/src/: .gitignore  Accelerometer.cs  CameraFileSelectionDialog.cs  CameraSelectionDialog.cs  DateCommands.cs  DirectoryCollection.cs  ExportStore.cs  FSpot.addin.xml  GPhotoCamera.cs  GlTransition.cs  GroupAdaptor.cs  GroupSelector.cs  Histogram.cs  ImportBackend.cs  ImportCommand.cs  InfoDisplay.cs  InternalProcess.cs  ItemAction.cs  MainWindow.cs  Makefile.am  MemorySurface.cs  PhotoArray.cs  PhotoEventArgs.cs  PhotoLoader.cs  PhotoPopup.cs  PhotoTagMenu.cs  PhotoView.cs  PixbufCache.cs  PixbufLoader.cs  PixbufUtils.cs  PrintOperation.cs  ProgressDialog.cs  RatingFilter.cs  RollStore.cs  RotateCommand.cs  SimpleCalendar.cs  SingleView.cs  SlideView.cs  SoftFocus.cs  TextureDisplay.cs  (+9 more)
FSPOT_0_5_0_STABLE/tools/: .gitignore  Makefile.am  f-spot-screensaver  f-spot-screensaver.desktop.in  f-spot-sqlite-upgrade
FlickrNet/: .cvsignore  AssemblyInfo.cs  Auth.cs  Blogs.cs  Cache.cs  Categories.cs  Context.cs  DateGranularity.cs  Flickr.cs  FlickrConfigurationSettings.cs  FlickrException.cs  Groups.cs  Licenses.cs  Makefile.am  OnlineUsers.cs  Person.cs  PhotoCounts.cs  PhotoInfo.cs  PhotoSearchOptions.cs  Photos.cs  Response.cs  UploadProgressEvent.cs  User.cs  Utils.cs
GKeyFile/: ChangeLog  GKeyFile.custom  GKeyFile.metadata  Makefile.am  gkeyfile-api.xml  gkeyfile-sharp-sources.xml  sample.cs
SmugMugNet/: .cvsignore  Makefile.am  NoCheckCertificatePolicy.cs
Tao/Tao.GlPostProcess/: Makefile.am
Tao/Tao.OpenGl.ExtensionLoader/: AssemblyInfo.cs  Makefile.am  (+1 more)
data/: Makefile.am  addin-xml-strings.cs
dbus-sharp/: .cvsignore  Makefile.am
dbus-sharp-glib/: .cvsignore  AssemblyInfo.cs  Makefile.am
docs/: .gitignore  ChangeLog  Changelog  Makefile.am  f-spot.omf.in  omf.make  xmldocs.make
gio-sharp/: Makefile.am
gnome-keyring-sharp/: .cvsignore  Makefile.am  Ring.cs
google-sharp/: .cvsignore  AlbumAccess.cs  Authentication.cs  CaptchaException.cs  CreateAlbumException.cs  GDataApi.cs  GoogleConnection.cs  GoogleService.cs  Makefile.am  MultipartRequest.cs  PicasaAlbum.cs  PicasaAlbumCollection.cs  PicasaPicture.cs  PicasaV1.cs  PicasaWeb.cs  UploadPictureException.cs  XmlUtil.cs
gtk-sharp-beans/: .gitignore  Builder.custom  Dialog.cs  Global.cs  Image.cs  Makefile.am  PixbufFormat.cs  PixbufLoader.cs  Timeout.cs  Widget.cs  gtk-sharp-beans.dll.config  snk
help/: .gitignore  Makefile.am
icons/: Makefile.am  f-spot-info.xcf.bz2  f-spot-simple-white.css  f-spot-simple.css
lib/: Makefile.am
libeog/: .cvsignore  Makefile.am  accessible-image-view-factory.h  accessible-image-view.c  cursors.c  cursors.h  eog-file-selection.c  eog-file-selection.h  eog-image.c  eog-image.h  eog-pixbuf-util.c  eog-pixbuf-util.h  eog-scroll-view.c  image-view.c  image-view.h  libeog-marshal.list  ui-image.c  ui-image.h  uta.c  uta.h  zoom.c  zoom.h
libfspot/: .cvsignore  Makefile.am  f-facedetect.c  f-image-surface.c  f-image-surface.h  f-image-view.c  f-image-view.h  f-jpeg-utils.c  f-jpeg-utils.h  f-pixbuf-save.c  f-pixbuf-unsharp.c  f-pixbuf-utils.c  f-pixbuf-utils.h  f-screen-utils.c  f-utils.c
semweb/: .cvsignore  Algos.cs  AssemblyInfo.cs  Euler.cs  GraphMatch.cs  Inference.cs  Interfaces.cs  LiteralFilters.cs  Makefile.am  MemoryStore.cs  N3Reader.cs  N3Writer.cs  Query.cs  RDFS.cs  README  RSquary.cs  RdfParser.cs  RdfReader.cs  RdfWriter.cs  RdfXmlReader.cs  RdfXmlWriter.cs  Reasoning.cs  Remote.cs  Resource.cs  SQLStore.cs  Sparql.cs  SparqlClient.cs  SpecialRelations.cs  Statement.cs  Store.cs  UriMap.cs  Util.cs  XPathSemWebNavigator.cs  XmlParser.cs  XmlWriter.cs
src/: .cvsignore  .gitignore  Accelerometer.cs  App.cs  AssemblyInfo.cs.in  AsyncPixbufLoader.cs  BeagleNotifier.cs  Bim.cs  BitConverter.cs  BlockProcessor.cs  CDExport.cs  CameraFileSelectionDialog.cs  CameraSelectionDialog.cs  Category.cs  CctTable.cs  Ciff.cs  Cms.cs  Cms.dll.config  ColorAdjustment.cs  ColorDialog.cs  ColorManagement.cs  CompatFileChooser.cs  ControlOverlay.cs  Core.cs  DBusProxy.cs  DCRawFile.cs  DateCommands.cs  DateRange.cs  Db.cs  DbItem.cs  Defines.cs.in  Delay.cs  DirectoryAdaptor.cs  DirectoryCollection.cs  DragDrop.cs  DragDropTargets.cs  DragDropUtils.cs  ExceptionDialog.cs  Exif.cs  ExifData.cs  (+170 more)
tests/: Makefile.am
(+3665 files in other folders)
